[tool.poetry]
name = "nn_solver"
version = "0.1.0"
description = ""
authors = ["Dominux <kir.gimranov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^0.12.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
