[package]
name = "py_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minesweeper"
crate-type = ["cdylib"]

[dependencies]
minesweeper_lib = { path = "../minesweeper" }

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]
