[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = "0.3.57"
wasm-logger = "0.2.0"
log = "0.4.6"

minesweeper_lib = { path = "../minesweeper" }
getrandom = { version = "0.2", features = ["js"] }
